More haptic events (hit and weapons) plus safeguard

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -6,3 +6,10 @@ bAllowClassAndBlueprintPinMatching=true
 bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
+
+[/Script/BhapticsPluginEditor.BhapticsPluginEditorSettings]
+AppId=670cc2b7b3159418aa944ade
+ApiKey=l41RFeIzVp5fnvf6we7f
+Status=0
+Setting=/Game/Bhaptics/BhapticsSettings.BhapticsSettings
+
