--- a/HitDetection.uproject
+++ b/HitDetection.uproject
@@ -14,6 +14,11 @@
 		{
 			"Name": "StaticMeshEditorModeling",
 			"Enabled": true
+		},
+		{
+			"Name": "BhapticsPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/c61885cc9ce54aacbb0230a1a79581cd"
 		}
 	]
 }
